gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-no_core.rs
#![crate_type = "rlib"]

#![no_core] // { dg-error ".E0658." "" { target *-*-* } }

pub struct S {}

